Adicionando layout css padrão

--- a/views/exemplo.phtml
+++ b/views/exemplo.phtml
@@ -1,4 +1,4 @@
-<br><br><h1 align="center">MVC</h1>
+<h1 align="center">MVC</h1>
 <p align="center">Funcionando corretamente</p>
 <div align="center">
     <?php echo date('d/m/Y',time('m/s'));?>
