--- a/views/layout.phtml
+++ b/views/layout.phtml
@@ -13,13 +13,24 @@
     </title>
     <!--  Arquivos CSS  -->
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
-    <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="assets/css/layout.css" rel="stylesheet" type="text/css" />
+    
+    <link rel="stylesheet" href="assets/css/font-awesome.min.css" type="text/css">
 </head>
 
-<body>
-    <section>
-        <!--  Todos os arquivos das views serão carregados aqui  -->
-        <?php $this->controller->renderView(); ?>
+<body class="container-fluid">
+    <header class="row cabecalho">
+    </header>
+    <section class="row">
+    <div class="col-sm-4 col-md-3 col-lg-3">
+			
+		</div>
+		<div class="col-sm-4 col-md-6 col-lg-6">
+            <?php $this->controller->renderView(); ?>
+		</div>
+		<div class="col-sm-4 col-md-3 col-lg-3">
+		</div>
     </section>
     <!--  Arquivos JS  -->
     <script src="assets/js/" type="text/javascript"></script>
